...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/market_used_buy_create_title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
...
                    app:layout_constraintBottom_toBottomOf="@+id/thumbnail_phone_number_border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/price_thumbnail_border"
                    app:layout_constraintVertical_bias="0.5" />

                <Button
                    android:id="@+id/market_used_buy_create_thumbnail_change_button"
                    android:layout_width="wrap_content"
                    android:layout_height="28.7dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="13.5dp"
                    android:layout_marginBottom="14.8dp"
                    android:background="@drawable/bg_gray9_rectangle"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/thumbnail_phone_number_border">

                    <RadioButton
                        android:id="@+id/market_used_buy_create_is_phone_public_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="51dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/colorPrimary"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/market_used_buy_create_buying_status_radiobutton_group" />

                <EditText
                    android:id="@+id/market_used_buy_create_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18.5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
...
